--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Visual Studio 2015 user specific files
 .vs/
 
+.vscode/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -62,3 +64,4 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
