translate some words

--- a/Mir3EIServerDev/Mir3server/GameSvr/GameSvr.rc
+++ b/Mir3EIServerDev/Mir3server/GameSvr/GameSvr.rc
@@ -169,109 +169,110 @@ BEGIN
     IDS_PROGRAM_TITLE       "미르의 전설2 - 게임 서버[The Legend of Mir 2-Game Server]"
     IDS_LOAD_ADMINCOMMAND   "INFO : 운영자 명령어 (%d 개) 를 읽었습니다.[INFO: The operator command () has been read.]"
     IDS_CONFLVS_LABEL1      "서버명[Server name]"
-    IDS_CONFLVS_LABEL2      "타이틀"
-    IDS_CONFLVS_LABEL3      "로그인 게이트 내부 IP 주소"
-    IDS_CONFLVS_LABEL4      "로그인 게이트 외부 IP 주소"
+    IDS_CONFLVS_LABEL2      "타이틀[title]"
+    IDS_CONFLVS_LABEL3      "로그인 게이트 내부 IP 주소[IP address inside login gate]"
+    IDS_CONFLVS_LABEL4      "로그인 게이트 외부 IP 주소[Login gate external IP address]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_CONFLVS_LABEL5      "게임 게이트 외부 IP 주소"
-    IDS_TAB_LABEL1          "서버 설정"
-    IDS_ACCEPT_GATESERVER   "INFO : 게임 게이트 서버 (%s) 가 접속 되었습니다."
-    IDS_OPEN_USER           "클라이언트 (%s) 가 접속을 시도 했습니다. "
-    IDS_CLOSE_USER          "클라이언트 (%s) 가 접속을 종료 했습니다."
-    IDS_OPEN_GATE           "%d 번 게이트가 접속 되었습니다."
-    IDS_CLOSE_GATE          "%d 번 게이트의 접속이 종료 되었습니다."
+    IDS_CONFLVS_LABEL5      "게임 게이트 외부 IP 주소[Game gate external IP address]"
+    IDS_TAB_LABEL1          "서버 설정[Server settings]"
+    IDS_ACCEPT_GATESERVER   "INFO : 게임 게이트 서버 (%s) 가 접속 되었습니다.[INFO: Game gate server () is connected.]"
+    IDS_OPEN_USER           "클라이언트 (%s) 가 접속을 시도 했습니다. [The client (%s) tried to connect.]"
+    IDS_CLOSE_USER          "클라이언트 (%s) 가 접속을 종료 했습니다.[The client (%s) has closed the connection.]"
+    IDS_OPEN_GATE           "%d 번 게이트가 접속 되었습니다.[Gate  is connected.]"
+    IDS_CLOSE_GATE          "%d 번 게이트의 접속이 종료 되었습니다.[The connection to gate has been terminated.]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_CONNECT_DBSERVER    "INFO : 데이터베이스 서버에 접속 되었습니다."
+    IDS_CONNECT_DBSERVER    "INFO : 데이터베이스 서버에 접속 되었습니다.[INFO: Connected to the database server.]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_LOADMAPFILE_GOOD    "맵 파일 (%s) 정보를 읽었습니다."
-    IDS_LOADMAPFILE_FAIL    "ERROR : 맵 파일 (%s) 정보를 읽을 수 없습니다."
-    IDS_DISCONNECT_DBSERVER "ERROR : 데이터베이스 서버와 접속이 끊어 졌습니다."
-    IDS_APPLY_RECONNECT     "INFO : 데이터베이스 서버에 접속을 시도합니다."
-    IDS_CANT_CONNECT        "ERROR : 데이터베이스 서버에 접속 할 수 없습니다."
-    IDS_FETCH_MONSTER       "몬스터 정보 (%d 개)를 읽었습니다."
-    IDS_FETCH_MONGEN        "몬스터 생성 정보 (%d 개)를 읽었습니다."
-    IDS_FETCH_STDITEMWEAPON "무기 아이템 정보 (%d 개)를 읽었습니다."
-    IDS_FETCH_STDITEMARMOR  "방어구 아이템 정보 (%d 개)를 읽었습니다."
-    IDS_FETCH_MERCHANT      "상인 정보 (%d 개)를 읽었습니다."
-    IDS_FETCH_MOVEMAPEVENT  "맵 이동 정보 (%d 개)를 읽었습니다."
-    IDS_ALLOW_LONGHIT       "어검술을 사용합니다."
-    IDS_NOTALLOW_LONGHIT    "어검술을 사용하지 않습니다."
-    IDS_ALLOW_WIDEHIT       "반월검법을 사용합니다."
-    IDS_NOTALLOW_WIDEHIT    "반월검법을 사용하지 않습니다."
+    IDS_LOADMAPFILE_GOOD    "맵 파일 (%s) 정보를 읽었습니다.[Read the map file (%s) information.]"
+    IDS_LOADMAPFILE_FAIL    "ERROR : 맵 파일 (%s) 정보를 읽을 수 없습니다.[ERROR: Could not read map file (%s) information.]"
+    IDS_DISCONNECT_DBSERVER "ERROR : 데이터베이스 서버와 접속이 끊어 졌습니다.[ERROR: The connection to the database server has been lost.]"
+    IDS_APPLY_RECONNECT     "INFO : 데이터베이스 서버에 접속을 시도합니다.[INFO: Try to connect to the database server.]"
+    IDS_CANT_CONNECT        "ERROR : 데이터베이스 서버에 접속 할 수 없습니다.[ERROR: Could not connect to the database server.]"
+    IDS_FETCH_MONSTER       "몬스터 정보 (%d 개)를 읽었습니다.[Monster information (%d) has been read.]"
+    IDS_FETCH_MONGEN        "몬스터 생성 정보 (%d 개)를 읽었습니다.[Monster creation information (%d) has been read.]"
+    IDS_FETCH_STDITEMWEAPON "무기 아이템 정보 (%d 개)를 읽었습니다.[Weapon item information (%d) has been read.]"
+    IDS_FETCH_STDITEMARMOR  "방어구 아이템 정보 (%d 개)를 읽었습니다.[Armor item information (%d) has been read.]"
+    IDS_FETCH_MERCHANT      "상인 정보 (%d 개)를 읽었습니다.[You have read the merchant information (%d).]"
+    IDS_FETCH_MOVEMAPEVENT  "맵 이동 정보 (%d 개)를 읽었습니다.[You have read the map movement information (%d).]"
+    IDS_ALLOW_LONGHIT       "어검술을 사용합니다.[Uses swordsmanship.]"
+    IDS_NOTALLOW_LONGHIT    "어검술을 사용하지 않습니다.[Does not use swordsmanship.]"
+    IDS_ALLOW_WIDEHIT       "반월검법을 사용합니다.[It uses the meniscus method.]"
+    IDS_NOTALLOW_WIDEHIT    "반월검법을 사용하지 않습니다.[The meniscus is not used.]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_ALLOW_FIREHIT       "당신의 무기가 불의 기운으로 달아올랐습니다."
-    IDS_NOTALLOW_FIREHIT    "기를 모으는데 실패하였습니다."
-    IDS_TIMEOUT_FIREHIT     "불의 기운이 사라졌습니다."
-    IDS_ATTACKMODE_ALL      "[대인 공격 방식 : 모두 공격 가능]"
-    IDS_ATTACKMODE_PEACE    "[대인 공격 방식 : 평화 공격]"
-    IDS_ATTACKMODE_GROUP    "[대인 공격 방식 : 그룹 단위 공격]"
-    IDS_ATTACKMODE_GUILD    "[대인 공격 방식 : 문파 단위 공격]"
-    IDS_ATTACKMODE_PKATTACK "[대인 공격 방식 : 선악 대결 공격]"
-    IDS_ATTACKMODE_CHGMODE  "대인 공격 방식 변경 : CTRL-H"
-    IDS_FETCH_STDITEMETC    "INFO : 기본 아이템 정보 (%d 개)를 읽었습니다."
-    IDS_FETCH_STDITEMACCESSORY "INFO : 특수 아이템 정보 (%d 개)를 읽었습니다."
+    IDS_ALLOW_FIREHIT       "당신의 무기가 불의 기운으로 달아올랐습니다.[Your weapon has risen with fire.]"
+    IDS_NOTALLOW_FIREHIT    "기를 모으는데 실패하였습니다.[Failed to collect energy.]"
+    IDS_TIMEOUT_FIREHIT     "불의 기운이 사라졌습니다.[The energy of fire is gone.]"
+    IDS_ATTACKMODE_ALL      "[대인 공격 방식 : 모두 공격 가능][[Interpersonal attack method: all attack possible]]"
+    IDS_ATTACKMODE_PEACE    "[대인 공격 방식 : 평화 공격][[Interpersonal Attack Method: Peace Attack]]"
+    IDS_ATTACKMODE_GROUP    "[대인 공격 방식 : 그룹 단위 공격][[Interpersonal attack method: group unit attack]]"
+    IDS_ATTACKMODE_GUILD    "[대인 공격 방식 : 문파 단위 공격][[Interpersonal attack method: munpa unit attack]]"
+    IDS_ATTACKMODE_PKATTACK "[대인 공격 방식 : 선악 대결 공격][[Interpersonal attack method: good and evil confrontation attack]]"
+    IDS_ATTACKMODE_CHGMODE  "대인 공격 방식 변경 : CTRL-H[Interpersonal attack method change: CTRL-H]"
+    IDS_FETCH_STDITEMETC    "INFO : 기본 아이템 정보 (%d 개)를 읽었습니다.[INFO: Basic item information (%d) has been read.]"
+    IDS_FETCH_STDITEMACCESSORY 
+                            "INFO : 특수 아이템 정보 (%d 개)를 읽었습니다.[INFO: Special item information (%d) has been read.]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_JOBNAME_W           "전사"
-    IDS_JOBNAME_S           "술사"
-    IDS_JOBNAME_T           "도사"
-    IDS_INSPECTOR_ON        "감시자 모드"
-    IDS_INSPECTOR_OFF       "감시자 모드 해제"
-    IDS_NOTENOUGHLEVEL_CRY  "외치기는 레벨 8 이상에서 사용할 수 있습니다."
-    IDS_CANTFIND_HUMAN      "님을 찾을 수 없습니다."
-    IDS_SKIL_LEVELUP        "%s 수련 레벨 %d 으로 변경"
-    IDS_USERCMD_NOWHISPER1  "귀엣말거부"
-    IDS_USERCMD_NOWHISPER2  "귓속말거부"
-    IDS_USERCMD_YESWHISPER1 "귓속말허용"
-    IDS_USERCMD_YESWHISPER2 "귀엣말허용"
-    IDS_USERCMD_NOWHISPER_SOMEBODY "차단"
-    IDS_USERCMD_DONTCRY1    "외치기거부"
-    IDS_USERCMD_DONTCRY2    "외치기차단"
-    IDS_USERCMD_DONTEXNG    "교환거부"
+    IDS_JOBNAME_W           "전사[Warrior]"
+    IDS_JOBNAME_S           "술사[Wizard]"
+    IDS_JOBNAME_T           "도사[Taoist]"
+    IDS_INSPECTOR_ON        "감시자 모드[Watcher mode]"
+    IDS_INSPECTOR_OFF       "감시자 모드 해제[Turn off watcher mode]"
+    IDS_NOTENOUGHLEVEL_CRY  "외치기는 레벨 8 이상에서 사용할 수 있습니다.[Shout can be used at level 8 or higher.]"
+    IDS_CANTFIND_HUMAN      "님을 찾을 수 없습니다.[Could not find]"
+    IDS_SKIL_LEVELUP        "%s 수련 레벨 %d 으로 변경[%s training level changed to %d]"
+    IDS_USERCMD_NOWHISPER1  "귀엣말거부[Rejection]"
+    IDS_USERCMD_NOWHISPER2  "귓속말거부[Whisper rejection]"
+    IDS_USERCMD_YESWHISPER1 "귓속말허용[Allow whispering]"
+    IDS_USERCMD_YESWHISPER2 "귀엣말허용[Earnings allowed]"
+    IDS_USERCMD_NOWHISPER_SOMEBODY "차단[block]"
+    IDS_USERCMD_DONTCRY1    "외치기거부[Refusal to shout]"
+    IDS_USERCMD_DONTCRY2    "외치기차단[Shout blocking]"
+    IDS_USERCMD_DONTEXNG    "교환거부[Refusal of exchange]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_USERCMD_ACPTGUILD   "문파가입"
-    IDS_USERCMD_ALOWPARTY   "동맹허용"
-    IDS_USERCMD_DOPARTY     "동맹"
-    IDS_USERCMD_BROKEPARTY  "동맹파기"
-    IDS_USERCMD_OUTGUILD    "문파탈퇴"
-    IDS_USERCMD_NOGUILDCRY1 "문파전음차단"
-    IDS_USERCMD_NOGUILDCRY2 "문파전음거부"
-    IDS_USERCMD_ATTACKMODE  "공격모드"
-    IDS_USERCMD_REST        "휴식"
-    IDS_USERCMD_SABUKDOOR   "사북성문"
-    IDS_LOAD_USERCOMMAND    "사용자 명령어 (%d 개)를 읽었습니다."
-    IDS_DEFENCEUP           "방어력 상승 %d 초"
-    IDS_MAGDEFENCEUP        "마항력 상승 %d 초"
-    IDS_MALE_WEAR           "남자 옷입니다."
-    IDS_FEMALE_WEAR         "여자 옷입니다."
+    IDS_USERCMD_ACPTGUILD   "문파가입[Munpa registration]"
+    IDS_USERCMD_ALOWPARTY   "동맹허용[Alliance allowed]"
+    IDS_USERCMD_DOPARTY     "동맹[alliance]"
+    IDS_USERCMD_BROKEPARTY  "동맹파기[Alliance destruction]"
+    IDS_USERCMD_OUTGUILD    "문파탈퇴[Quit]"
+    IDS_USERCMD_NOGUILDCRY1 "문파전음차단[Door wave electric sound blocking]"
+    IDS_USERCMD_NOGUILDCRY2 "문파전음거부[Rejection of doorway sound]"
+    IDS_USERCMD_ATTACKMODE  "공격모드[Attack mode]"
+    IDS_USERCMD_REST        "휴식[rest]"
+    IDS_USERCMD_SABUKDOOR   "사북성문[Sabukseongmun]"
+    IDS_LOAD_USERCOMMAND    "사용자 명령어 (%d 개)를 읽었습니다.[User commands (%d) have been read.]"
+    IDS_DEFENCEUP           "방어력 상승 %d 초[Defense increase %d seconds]"
+    IDS_MAGDEFENCEUP        "마항력 상승 %d 초[Horse drag increase %d seconds]"
+    IDS_MALE_WEAR           "남자 옷입니다.[Men clothes.]"
+    IDS_FEMALE_WEAR         "여자 옷입니다.[Woman clothes.]"
 END
 
 STRINGTABLE
 BEGIN
-    IDS_NOTENOUGH_VALUE     "착용할 수 없습니다."
-    IDS_NOTENOUGH_WEIGHT    "너무 무겁습니다. "
-    IDS_GOLD                "금전"
-    IDS_NEVERDIE_ON         "무적모드"
-    IDS_NEVERDIE_OFF        "평범모드"
-    IDS_CAPTURE_ON          "갈무리 시작"
-    IDS_CAPTURE_OFF         "갈무리 끝"
+    IDS_NOTENOUGH_VALUE     "착용할 수 없습니다.[It cannot be worn.]"
+    IDS_NOTENOUGH_WEIGHT    "너무 무겁습니다. [It is too heavy.]"
+    IDS_GOLD                "금전[money]"
+    IDS_NEVERDIE_ON         "무적모드[Invincible Mode]"
+    IDS_NEVERDIE_OFF        "평범모드[Normal mode]"
+    IDS_CAPTURE_ON          "갈무리 시작[Start capturing]"
+    IDS_CAPTURE_OFF         "갈무리 끝[The end of the capture]"
 END
 
 #endif    // 벴刀(벴벌) resources
